src/assets/main.css
:root {
  --primary: #FFCE00;
  --secondary: #FE4880;
  --dark: #212121;
  --light: #F3F3F3;
}

* {
  margin: 0;
  padding: 0;
}

body {
  font-family: montserrat, sans-serif;
  width: 100%;
  min-height: 100vh;
}

.card {
  margin: 100px auto 0;
  width: 400px;
  height: 600px;
  perspective: 1000px;
  border:none;
}
.animate{
  animation: fadeinout 4s;
}
@keyframes fadeinout {
  0% {opacity: 1;}
  50% {opacity: 0;}
  100% {opacity: 1;}
}
.card__inner {
  width: 100%;
  height: 100%;
  transition: transform 1s;
  transform-style: preserve-3d;
  cursor: pointer;
  position: relative;
  display: flex;
  align-items: center;
  justify-content: center;
}

.card__inner.is-flipped {
  transform: rotateY(180deg);
}

.frontView{
  display: flex;
  flex-direction: column;
}

.refreshBtn{
  color: #01212e !important;
}

.frontView p {
  color: #f3a45e;
  text-align: center;
  font-size: 40px;
  margin-top: 50px;
  font-weight: bold;
  }

.twitter{
  filter: invert(30%) sepia(135%) saturate(350%) hue-rotate(344deg) brightness(101%) contrast(91%);
} 

.frontView img {
height: 125;
width: 125px;
margin: 0 auto;
}

.card__face {
  position: absolute;
  width: 100%;
  height: 100%;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  overflow: hidden;
  border-radius: 16px;
  box-shadow: 0px 3px 18px 3px rgba(0, 0, 0, 0.2);
}

.card__face--front {
  background-image: url(./Flip_SVG.svg);
  background-size: cover;
  background-position: center;
  display: flex;
  align-items: center;
  justify-content: center;
}
.winningtext{
  color: #FFF;
  font-size: 18px;
  margin-top: 35px;
}
.card__face--front h2 {
  color: #FFF;
  font-size: 32px;
}
 .card__header h3 {
  color: #FFF;
  font-size: 32px;
  margin-left: 15px;
  text-align: center;
  margin-top: 25px;
  margin-bottom: 25px;
}

.cardBack_data p{
  color: #FFF;
  font-size: 20px;
  margin-left: 15px;
  margin-top: 25px;
  
}
.cardBack_data{
  display: flex;
  align-items: center;
}
.cardBack_data img{
  height: 50px;
  width: 50px;
}
.card__face--back {
  background-image: url(./Flip_SVG.svg);
  background-size: cover;
  background-position: center;
  transform: rotateY(180deg);
}

.card__content {
  width: 100%;
  height: 100%;
}

.card__header {
  position: relative;
  padding: 30px 30px 40px;
}

.card__header:after {
  content: '';
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-image: url(./Flip_SVG.svg);
  background-size: cover;
  background-position: center;
  z-index: -1;
  border-radius: 0px 0px 50% 0px;
}

.pp {
  display: block;
  width: 128px;
  height: 128px;
  margin: 0 auto 30px;
  border-radius: 50%;
  background-color: #FFF;
  border: 5px solid #FFF;
  object-fit: cover;
}

.card__header h2 {
  color: #FFF;
  font-size: 32px;
  font-weight: 900;
  text-transform: uppercase;
  text-align: center;
}

.card__body {
  padding: 30px;
}

.card__body h3 {
  color: var(--dark);
  font-size: 24px;
  font-weight: 600;
  margin-bottom: 15px;
}

.card__body p {
  color: var(--dark);
  font-size: 18px;
  line-height: 1.4;
}

